Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24657

Windows: QApplication::setOverrideCursor doesn't work in Qt 5.0

    XMLWordPrintable

Details

    • 83d113feb01be72f9a0f1714b69541e7ebc7c4ca

    Description

      The QApplication::setOverrideCursor doesn't work anymore. To demonstrate, add this code to a suitable place in an existing application:

      QApplication::setOverrideCursor(Qt::WaitCursor);
      

      The cursor doesn't change to waitcursor in 5.0, but does in 4.8. Only visible effect of setting override cursor is that if mouse cursor is moved to the edge of a resizable window so that it changes to resize cursor, and then subsequently moved back inside application window, the cursor remains as resize cursor instead of changing to default cursor. This behavior goes away if QApplication::restoreOverrideCursor() is called.

      Attachments

        For Gerrit Dashboard: QTBUG-24657
        # Subject Branch Project Status CR V

        Activity

          People

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes