src/plugins/platforms/windows/qwindowswindow.cpp
@@ -1309,16 +1309,14 @@ void QWindowsWindow::getSizeHints(MINMAXINFO *mmi) const
 }
 
 /*!
-    \brief Applies to cursor property set on the window to the global cursor
-    unless there is an override cursor.
+    \brief Applies to cursor property set on the window to the global cursor.
 
     \sa QWindowsCursor
 */
 
 void QWindowsWindow::applyCursor()
 {
-    if (!QGuiApplication::overrideCursor())
-        SetCursor(m_cursor.handle());
+    SetCursor(m_cursor.handle());
 }
 
 void QWindowsWindow::setCursor(const QWindowsWindowCursor &c)
